--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .flex-d {
   display: flex;
   justify-content: space-between;
@@ -6,4 +8,64 @@
 
 .done {
   text-decoration: line-through;
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 2px #113a65;
+  width: 50%;
+  padding-bottom: 4px;
+  color: #000;
+  font-weight: 600;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+  outline: none;
+  width: 100%;
+}
+
+input::-webkit-input-placeholder {
+  color: #103a65;
+  font-weight: lighter;
+}
+
+input::-moz-placeholder {
+  color: #103a65;
+  font-weight: lighter;
+}
+
+.button {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  padding: 12px 40px;
+  margin-top: 10px;
+  border-radius: 30px;
+  background:linear-gradient(to right top, rgb(73, 84, 222), rgb(120, 107, 175));
+  background-position: 100% 0;
+  background-size: 200% 200%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  color: white;
+  box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+  transition: .5s;
+}
+.button:hover {
+  box-shadow: 0 0 0 0 rgba(0,40,120,0);
+  background-position: 0 0;
+}
+
+.note_card {
+  margin-bottom: 2rem;
+
+  padding: 15px;
+  width: 70%;
+  border-radius: 5px;
+  background-color: whitesmoke;
+}
+
+.rotated {
+  transform: rotate(-2deg)
 }
