--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background:linear-gradient(to right, rgb(137, 226, 255), rgb(166, 142, 255));
 }
 
 code {
