--- a/src/App.css
+++ b/src/App.css
@@ -1,76 +1,171 @@
-
-
 .flex-d {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .done {
-  text-decoration: line-through;
+    text-decoration: line-through;
 }
 
-input[type="text"] {
-  background-color: transparent;
-  border: 0;
-  border-bottom: solid 2px #113a65;
-  width: 50%;
-  padding-bottom: 4px;
-  color: #000;
-  font-weight: 600;
-  margin-bottom: 30px;
-  margin-right: 20px;
-  font-size: 20px;
-  outline: none;
-  width: 100%;
-
+.input {
+    background-color: transparent;
+    border: 0;
+    border-bottom: solid 2px #113a65;
+    width: 50%;
+    padding-bottom: 4px;
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    font-size: 20px;
+    outline: none;
+    width: 100%;
 }
 
-input::-webkit-input-placeholder {
-  color: #103a65;
-  font-weight: lighter;
+.input::-webkit-input-placeholder {
+    color: #103a65;
+    font-weight: lighter;
 }
 
-input::-moz-placeholder {
-  color: #103a65;
-  font-weight: lighter;
+.input::-moz-placeholder {
+    color: #103a65;
+    font-weight: lighter;
 }
 
 .button {
-  text-decoration: none;
-  outline: none;
-  display: inline-block;
-  padding: 12px 40px;
-  margin-top: 10px;
-  border-radius: 30px;
-  background:linear-gradient(to right top, rgb(73, 84, 222), rgb(120, 107, 175));
-  background-position: 100% 0;
-  background-size: 200% 200%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 24px;
-  font-weight: 300;
-  color: white;
-  box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
-  transition: .5s;
+    text-decoration: none;
+    outline: none;
+    display: inline-block;
+    padding: 12px 40px;
+    margin-top: 15px;
+    border-radius: 10px;
+    background: linear-gradient(to right top, rgb(73, 84, 222), rgb(120, 107, 175));
+    background-position: 100% 0;
+    background-size: 200% 200%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: white;
+    box-shadow: 0 16px 32px 0 rgba(0, 40, 120, .35);
+    transition: .5s;
 }
+
 .button:hover {
-  box-shadow: 0 0 0 0 rgba(0,40,120,0);
-  background-position: 0 0;
+    box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
+    background-position: 0 0;
 }
 
 .note_card {
-  margin-bottom: 2rem;
-
-  padding: 15px;
-  width: 80%;
-  border-radius: 5px;
-  background-color: whitesmoke;
+    margin-bottom: 2rem;
+    padding: 15px;
+    width: 80%;
+    border-radius: 5px;
+    background-color: whitesmoke;
 }
 
 .rotated {
-  transform: rotate(-2deg)
+    transform: rotate(-2deg)
 }
 
-:focus::placeholder {
-  
+:focus::placeholder {}
+
+/* Loader */
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid blue;
+    border-color: blue transparent blue transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    margin: .5rem;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Search */
+
+.search {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
+}
+
+.searching {
+    border: 1px solid #000;
+    outline: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 18px;
+    background: transparent;
+}
+
+.search-button {
+    text-decoration: none;
+    outline: none;
+    padding: 12px 40px;
+    margin-top: 10px;
+    border-radius: 10px;
+    background: linear-gradient(to right top, rgb(73, 84, 222), rgb(120, 107, 175));
+    background-position: 100% 0;
+    background-size: 200% 200%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    color: white;
+    box-shadow: 0 16px 32px 0 rgba(0, 40, 120, .35);
+
+    transition: .5s;
+}
+
+.search-button:hover {
+    box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
+    background-position: 0 0;
+}
+
+
+/* Transition */
+
+.search-enter {
+    opacity: 0;
+    transform: scale(0.6);
+}
+
+.search-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 500ms, transform 500ms;
+}
+
+.search-exit {
+    opacity: 1;
+}
+
+.search-exit-active {
+    opacity: 0;
+    transform: scale(0.6);
+    transition: opacity 500ms, transform 500ms;
 }
